@@ -58,6 +58,12 @@ hibernate {
 	}
 }
 
+/*tasks.named<org.springframework.boot.gradle.tasks.run.BootRun>("bootRun") {
+	jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
+}*/
+
+
 tasks.withType<Test> {
 	useJUnitPlatform()
+	/*jvmArgs = listOf("-Xshare:off")*/
 }
